# -Pet-Breed-Classification-Project

./: README.md  app.py  cnn_model.py  data_loader.py  download_data.py  evaluate.py  index.html  pyproject.toml  requirements.txt  setup.py  train.py  training_log.txt  visualize.py  vocab.json
